# weather_info_bot

./: .gitignore  LICENSE  bot.py  pyproject.toml
config/: __init__.py  config_bot.py  config_db.py
database/: __init__.py  db_helper.py
handlers/: __init__.py  base_commands.py  user_commands.py
keyboards/: __init__.py  bot_menu_kb.py  cities_list.py  cities_list_kb.py
lexicon/: __init__.py  lexicon.py
middlewares/: __init__.py  check_user.py
models/: __init__.py  base.py  city.py  users.py
services/: __init__.py  weather_services.py
state/: __init__.py  city_state.py
utilits/: __init__.py  cities_utilits.py
